refactor: 동의어 테이블을 용어의 동의어 컬럼으로 대체 #99